# translation-client

./: .releaserc.json  Cargo.toml  README.md  justfile
src/: client.rs  lib.rs  request.rs
